<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Hang10</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="playButton">Play!</string>
    <string name="continueButton">Continue\nGame</string>
    <string name="helpButton">Help</string>
    <string name="optionsButton">OPTIONS</string>
    <string name="title_activity_game_select">GameSelectActivity</string>
    <string name="title_activity_help">HelpActivity</string>
    <string name="title_activity_options">OptionsActivity</string>
    <string name="helpTitle">HELP</string>
    <string name="backButton">BACK</string>
    <string name="prevButton">Prev.</string>
    <string name="nextButton">Next</string>
    <string name="placeholder">PH</string>
    <string name="firstPage">This is the first page.</string>
    <string name="lastPage">This is the last page.</string>
    <string name="hardReset">RESET PROGRESS\nThis will mark all game modes as incomplete.</string>
    <string name="resetEndurance">CLEAR HIGHSCORE\nThis will reset your highscore in Endurance mode.</string>

    <string-array name="instructions">
        <item>Welcome to Hang 10!\n\n
            This is unlike any other Hangman game you have ever played!\n\n
            If you have played Hangman before, this will be familiar and you should should have no problems figuring out the game. But even if you haven\'t, these help pages should tell you everything you need to know.</item>
        <item>The Basics\n\n
            Each game of Hang 10 consists of - well - 10 rounds of Hangman puzzles - each of increasing difficulty.\n\n
            The concept is simple - pick a category and you\'ll be given a phrase to guess. Guess letters by tapping on them and if they are in the phrase they are revealed. If not, you lose a life! :(\n\n
            You win each round by completely revealing the phrase. Win 10 rounds without losing all your lives and you win! </item>
        <item>Game Modes\n\n
		    Completing the game the first time round grants you access to new game modes to test yourself against.\n\n
		    Some game modes restrict your powerups, some have quirky new features and others are just plain difficult.\n\n
		    Can you conquer them all?</item>
    </string-array>
    
    <string name="powerupHeader">Depending on the game mode, you will have up to four powerups at your disposal.</string>
    <string name="fgDesc">The Free Guess: If you guess wrongly in your next turn, you won\'t lose a life!</string>
    <string name="leDesc">The Letter Eliminator: Eliminates five random letters not in the phrase from those that have not been guessed.</string>
    <string name="lrDesc">The Letter Reveal: Reveals a random letter in the phrase.</string>
    <string name="lsDesc">The Life Saver: Depending on how many of the letter you guess next are in the phrase, you will gain lives corressponding to that amount.</string>
    
    <string-array name="instructionPages">
        <item>Basics</item>
        <item>Game Modes</item>
        <item>Power Ups</item>
    </string-array>

    <string name="modeSelect">Select a game mode:</string>
    <string name="cEasy">Classic\nEasy</string>
    <string name="cMedium">Classic\nMedium</string>
    <string name="cHard">Classic\nHard</string>
    <string name="freeLunch">Free\nLunch</string>
    <string name="noFrills">No\nFrills</string>
    <string name="escalation">Escalation</string>
    <string name="fortune">Fortune</string>
    <string name="quadLife">Quad\nLife</string>
    <string name="endurance">Endurance</string>

    <string-array name="modeNames">
        <item>Classic Easy</item>
        <item>Classic Medium</item>
        <item>Classic Hard</item>
        <item>Free Lunch</item>
        <item>No Frills</item>
        <item>Escalation</item>
        <item>Fortune</item>
        <item>Quad-Life</item>
        <item>Endurance</item>
    </string-array>
    <string-array name="modeDesc">
        <item>The most basic game mode. 50 lives to get through 10 puzzles.</item>
        <item>Hard. 40 lives to get through 10 puzzles.</item>
        <item>Incredibly Hard. Just 30 lives to get through 10 puzzles.</item>
        <item>You get one Free Guess per round, but no other powerups. 45 lives.</item>
        <item>How Hang 10 was meant to be played. No powerups. 50 lives.</item>
        <item>Correct guesses grant you extra lives, but your errors get more deadly as the game progresses. 80 lives.</item>
        <item>Just like the famous gameshow - you cannot guess vowels. 40 lives.</item>
        <item>Hardcore. You get 4 lives a puzzle. No more, no less. No powerups either.</item>
        <item>The ultimate challenge. Infinite hard puzzles - how many can you solve with 35 lives?</item>
    </string-array>
    <string-array name="unlockReqs">
        <item>No requirements.</item>
        <item>Complete Classic Easy to unlock.</item>
        <item>Complete Classic Medium to unlock.</item>
        <item>Complete Classic Easy to unlock.</item>
        <item>Complete Free Lunch to unlock.</item>
        <item>Complete Free Lunch or Classic Medium to unlock.</item>
        <item>Complete No Frills or Escalation to unlock.</item>
        <item>Complete Escalation or Classic Hard to unlock.</item>
        <item>Complete Fortune or Quad-Life to unlock.</item>
    </string-array>
    <string-array name="beatComments">
        <item>That was almost too easy - right?</item>
        <item>Hopefully that wasn\'t too hard.</item>
        <item>Nice work! But there are harder modes to come...</item>
        <item>Big deal. Arguably Free Lunch is the easiest game mode.</item>
        <item>Who needs power-ups?</item>
        <item>How stressful were those last few rounds?</item>
        <item>Too bad to don\'t win real money...</item>
        <item>I have no words. That was very, very impressive.</item>
        <item>You can\'t beat endurance mode. This is a bug.</item>
    </string-array>
    <string-array name="enduranceComments">
        <item>Weak... How did you even unlock this mode?</item>
        <item>You\'re better than this.</item>
        <item>You did okay... I guess.</item>
        <item>Not bad... Not bad at all...</item>
        <item>Impressive... Can you do even better though?</item>
        <item>Much respect to you.</item>
        <item>You\'re either too good or cheating. I suspect the latter.</item>
    </string-array>
	
    <string name="noSaveGame">There is currently no saved game.</string>
    <string name="modeLocked">You need to unlock this mode first.</string>
    <string name="title_activity_category">CategoryActivity</string>
    <string name="categoryChoice">Choose a Category...</string>
    <string name="categoryChosen">You have already chosen this category.</string>
    <string name="title_activity_game">GameActivity</string>
    <string name="letterChosen">You have already chosen this letter.</string>
    <string name="vowelForbidden">You cannot guess vowels in Fortune mode.</string>
    <string name="gameOver">GAME OVER! The correct answer was:</string>
    <string name="nextRound">Next></string>
    <string name="gameWon">YOU WIN!</string>
    <string name="alreadyBeaten">You have already beat this mode - why not try something more challenging?</string>
    <string name="alreadyUsed">This powerup is unavailable.</string>
    <string name="alreadyActive">This powerup is already active.</string>

</resources>
