<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="sg.com.yahoo.ryanlouck.hang10.MainActivity" >

   <LinearLayout
        android:id="@+id/buttonLine"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true" >

        <Button
            android:id="@+id/playButton"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/playButton" />

        <Button
            android:id="@+id/continueButton"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/continueButton" />

        <Button
            android:id="@+id/helpButton"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/helpButton" />

        <Button
            android:id="@+id/optionsButton"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/optionsButton" />

    </LinearLayout>

   <TextView
       android:id="@+id/title"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_alignParentTop="true"
       android:layout_centerHorizontal="true"
       android:hint="?android:attr/textAppearanceLarge"
       android:text="@string/app_name"
       android:textAppearance="?android:attr/textAppearanceLarge" />

</RelativeLayout>