<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/background"
    tools:context="sg.com.yahoo.ryanlouck.hang10.OptionsActivity" >

	<LinearLayout
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:layout_below="@+id/backButton"
	    android:orientation="vertical" >

		<Button
		    android:id="@+id/hardResetButton"
		    style="?android:attr/buttonStyleSmall"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:layout_weight="1"
		    android:background="@drawable/catbox"
		    android:text="@string/hardReset" />
		
		<Button
		    android:id="@+id/highscoreResetButton"
		    style="?android:attr/buttonStyleSmall"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:layout_weight="1"
		    android:background="@drawable/catbox"
		    android:text="@string/resetEndurance" />

	</LinearLayout>

	<TextView
	    android:id="@+id/titleOptions"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_alignParentTop="true"
	    android:layout_centerHorizontal="true"
	    android:text="@string/optionsButton"
	    android:textAppearance="?android:attr/textAppearanceLarge" />

	<ImageButton
	    android:id="@+id/backButton"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_alignParentLeft="true"
	    android:layout_alignParentTop="true"
	    android:adjustViewBounds="true"
	    android:background="@drawable/blankbox"
	    android:src="@drawable/backbutton" />

</RelativeLayout>
